src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ADvendio__CustomSalutation__c</fullName>
        <description>Please enter the custom salutation phrase here. For example, Hi Joe, Dear Joe, Dear Mr. Joe Doe, Dear Sir or Madam, etc. This will override the standard salutation in the field Salutation Letter.</description>
        <inlineHelpText>You have two options to use this field - either let the user enter a salutation phrase or use a custom workflow to generate this automatically.</inlineHelpText>
        <label>Custom Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Function__c</fullName>
        <description>Enter the Function of this contact for this account.</description>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ADvendio__Salutation_Letter__c</fullName>
        <description>The salutation can be defined while enter the First Name and Last Name. This field combines all three fields.</description>
        <formula>IF(ISBLANK(ADvendio__CustomSalutation__c), IF(LastName =&quot;NN&quot;, &quot;Sehr geehrte Damen und Herren&quot;, CASE( Salutation , &quot;Herr&quot;, &quot;Sehr geehrter Herr&quot;, &quot;Herr Dr.&quot;, &quot;Sehr geehrter Herr Dr.&quot;, &quot;Herr Prof.&quot;, &quot;Sehr geehrter Herr Prof.&quot;, &quot;Frau&quot;, &quot;Sehr geehrte Frau&quot;, &quot;Frau Dr.&quot;, &quot;Sehr geehrte Frau Dr.&quot;, &quot;Frau Prof.&quot;, &quot;Sehr geehrte Frau Prof.&quot;, &quot;Mr.&quot;, &quot;Dear Mr.&quot;, &quot;Mrs.&quot;, &quot;Dear Mrs.&quot;, &quot;Dr.&quot;, &quot;Dear Dr.&quot;, &quot;Prof.&quot;, &quot;Dear Prof.&quot;, &quot;Ms.&quot;, &quot;Dear Ms.&quot;, &quot;&quot;) &amp;&quot; &quot; &amp; LastName), ADvendio__CustomSalutation__c)</formula>
        <label>Salutation Letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__VisitReportAttachment__c</fullName>
        <description>This picklist defines the visit report attachment type, default is PDF.</description>
        <inlineHelpText>Define which kind of attachment this contact should receive.</inlineHelpText>
        <label>Visit Report Attachment</label>
        <picklist>
            <picklistValues>
                <fullName>PDF</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Austrittsdatum__c</fullName>
        <description>Zu welchem Datum hat der Kontakt diese Funktion bzw. diese Firma verlassen?</description>
        <inlineHelpText>Zu welchem Datum hat der Kontakt diese Funktion bzw. diese Firma verlassen?</inlineHelpText>
        <label>Austrittsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eintrittsdatum__c</fullName>
        <description>Ab wann hat dieser Kontakt diese Aufgabe bei diesem Unternehmen?</description>
        <inlineHelpText>Ab wann hat dieser Kontakt diese Aufgabe bei diesem Unternehmen?</inlineHelpText>
        <label>Eintrittsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funktion_inaktiv__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Befindet sich dieser Kontakt aktuell in Elternzeit, Schwangerschaftsurlaub, Mutterschutz oder Ähnliches?
Ist also nur vorübergehend abwesend.</description>
        <inlineHelpText>Befindet sich dieser Kontakt aktuell in Elternzeit, Schwangerschaftsurlaub, Mutterschutz oder Ähnliches?
Ist also nur vorübergehend/temporär abwesend.</inlineHelpText>
        <label>Funktion inaktiv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geburtstag_Jahr__c</fullName>
        <description>Teil des Geburtstagssdatum JJJJ</description>
        <inlineHelpText>Teil des Geburtstagsdatum, nur das Jahr.
Wenn es leer gelassen wird, wird das Jahr 1904 verwendet für automatisch gefülltes Geburtdatum</inlineHelpText>
        <label>Geburtstag Jahr</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geburtstag_Monat__c</fullName>
        <description>Teil des Geburtstagssdatum MM</description>
        <inlineHelpText>Teil des Geburtstagssdatum  nur der Monat</inlineHelpText>
        <label>Geburtstag Monat</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geburtstag_Tag__c</fullName>
        <description>Teil des Geburtstagssdatum TT</description>
        <inlineHelpText>Teil des Geburtstagssdatum nur der Tag</inlineHelpText>
        <label>Geburtstag Tag</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InhaberACC__c</fullName>
        <description>Prüft ab ob der Accountinhaber auch diesen Kontakt betreut (als Inhaber eingetragen ist)</description>
        <formula>IF( Account.OwnerId=OwnerId  , &quot;OK&quot;,&quot;NOTOK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Owner of the account</inlineHelpText>
        <label>InhaberACC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kontakt_f_r_das_Investment_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Diese Checkbox ist für Seven Ventures angelegt und markiert Kontakte die im Investement Summary angezeigt werden sollen.</description>
        <inlineHelpText>Mit dieser Checkbox wird gesteuert ob der Kontakt im Investment Summary angezeigt werden soll oder nicht.</inlineHelpText>
        <label>Kontakt für das Investment Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kontaktdublette__c</fullName>
        <description>da es Personen geben kann mit mehr als einer Funktion - gibt es somit auch eine Link zwischen beiden.</description>
        <inlineHelpText>Eine Person/Kontakt kann mehr als eine Funktion/Aufgabe haben - beiden werden abgebildet. der Kontakt ist somit 2 mal in sf.com- Bitte hier den Link zur Kontaktdublette eintragen.</inlineHelpText>
        <label>Kontaktdublette</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LifeRay_Benutzer_ID__c</fullName>
        <description>Innerhalb von LifeRay (Portalsystem der sevenonemedia.de) haben registrierte Benutzer eine eindeutige Nummer - diese wird hier hinterlegt um später einen Datenabgleich sicherzustellen.</description>
        <inlineHelpText>Innerhalb von LifeRay (Portalsystem der sevenonemedia.de) haben registrierte Benutzer eine eindeutige Nummer - diese wird hier hinterlegt um später einen Datenabgleich sicherzustellen.</inlineHelpText>
        <label>LifeRay-Benutzer-ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Dealfunction__c</fullName>
        <label>Deal function</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notizen_Kommentare__c</fullName>
        <inlineHelpText>Freitext für interne Notizen.</inlineHelpText>
        <label>Notizen / Kommentare</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountVisibility__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used for sharing, depends on visibility state 0 = visible (not invalid, not deleted) 50 = invalid (not deleted) 100 = deleted</description>
        <inlineHelpText>Used for sharing, depends on visibility state 0 = visible (not invalid, not deleted) 50 = invalid (not deleted) 100 = deleted</inlineHelpText>
        <label>Account Visibility</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_AnredeBriefDeutsch__c</fullName>
        <description>Deutsche Anrede des Kontaktes in einem Brief unter Berücksichtigung des Geschlechts und einem Titel (wenn vorhanden).</description>
        <formula>IF( OR (LastName =&quot;NN&quot;, ISPICKVAL(Salutation,&apos;&apos;)), &quot;Sehr geehrte Damen und Herren&quot;, 
CASE( Salutation , 
&quot;Herr&quot;, &quot;Sehr geehrter Herr&quot;, 
&quot;Frau&quot;, &quot;Sehr geehrte Frau&quot; , 
&quot;Mr.&quot;, &quot;Sehr geehrter Herr&quot;, 
&quot;Mrs.&quot;, &quot;Sehr geehrte Frau&quot;, 
&quot;&quot;) 
&amp;
if (ISPICKVAL(SomTv_TitelAkademischerGrad__c , &apos;&apos;) , &apos;&apos; , (&quot; &quot; &amp; Text(SomTv_TitelAkademischerGrad__c)) )
&amp;
if (ISPICKVAL(SomTv_AdelsTitel__c, &apos; &apos;) ,  &apos;&apos; ,  (&quot; &quot; &amp; TEXT( SomTv_AdelsTitel__c )) )
&amp; LastName 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Deutsche Anrede des Kontaktes in einem Brief unter Berücksichtigung des Geschlechts und einem Titel (wenn vorhanden).</inlineHelpText>
        <label>Anrede Brief Deutsch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AnredeBriefEnglisch__c</fullName>
        <description>Englische Anrede des Kontaktes in einem Brief unter Berücksichtigung des Geschlechts und einem Titel (wenn vorhanden).</description>
        <formula>IF(OR (LastName =&quot;NN&quot;, ISPICKVAL(Salutation,&apos;&apos;)), &quot;Dear Sir or Madam&quot;, 
CASE( Salutation , 
&quot;Herr&quot;, &quot;Dear Mr.&quot;, 
&quot;Frau&quot;, &quot;Dear Mrs.&quot; , 
&quot;Mr.&quot;, &quot;Dear Mr.&quot;, 
&quot;Mrs.&quot;, &quot;Dear Mrs.&quot;, 
&quot;&quot;)
&amp;
if (ISPICKVAL(SomTv_TitelAkademischerGrad__c , &apos;&apos;) , &apos;&apos; , (&quot; &quot; &amp; Text(SomTv_TitelAkademischerGrad__c)) )
&amp;
if (ISPICKVAL(SomTv_AdelsTitel__c, &apos; &apos;) ,  &apos;&apos; ,  (&quot; &quot; &amp; TEXT( SomTv_AdelsTitel__c )) )
&amp; LastName 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Englische Anrede des Kontaktes in einem Brief unter Berücksichtigung des Geschlechts und einem Titel (wenn vorhanden).</inlineHelpText>
        <label>Anrede Brief Englisch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Austritt90Tage__c</fullName>
        <description>Testfeld für ContactFlusher</description>
        <formula>IF ((TODAY() - Austrittsdatum__c) &gt; 90,
    true,
    false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P7S1_Austritt90Tage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_CreatorSphere__c</fullName>
        <description>Sphäre (SomDe, SomAt...) des Erstellers des Kontakts</description>
        <formula>TEXT(CreatedBy.P7S1_Sphere__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sphäre (SomDe, SomAt...) des Erstellers des Kontakts</inlineHelpText>
        <label>Ersteller-Sphäre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Doublette__c</fullName>
        <description>gefüllt wenn Teil einer Doublette
&quot;A&quot; für erstes Doubletten-Mitglied
&quot;B&quot; für zweite Doubletten-Mitglied</description>
        <inlineHelpText>gefüllt wenn Teil einer Doublette
&quot;A&quot; für erstes Doubletten-Mitglied
&quot;B&quot; für zweite Doubletten-Mitglied</inlineHelpText>
        <label>P7S1_Doublette</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Emp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mitarbeiter im P7S1-Konzern</description>
        <inlineHelpText>Mitarbeiter im P7S1-Konzern</inlineHelpText>
        <label>Mitarbeiter</label>
        <referenceTo>P7S1_Emp__c</referenceTo>
        <relationshipLabel>Kontakte</relationshipLabel>
        <relationshipName>Kontakte</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Konzernmitarbeiter__c</fullName>
        <formula>Account.P7S1_Konzernmitglied__c = true 
|| 
NOT ( ISBLANK( P7S1_Emp__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P7S1 Konzernmitarbeiter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_LetzteAenderungUnit__c</fullName>
        <description>Die letzte Änderung am Kontakt wurde durchgeführt durch folgende Unit</description>
        <formula>LastModifiedBy.P7S1_Unit__c</formula>
        <inlineHelpText>Die letzte Änderung am Kontakt wurde durchgeführt durch folgende Unit</inlineHelpText>
        <label>Letzte Änderung durch Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Next_Birthday__c</fullName>
        <description>Shows the Date of the next recurrence of the contacts birthday.</description>
        <formula>DATE(
  IF ( 
    AND (
      MONTH(Birthdate) &gt;= MONTH ( TODAY() ),
      DAY(Birthdate) &gt;= DAY( TODAY() )
    ) ,
    YEAR( TODAY() ) ,
    YEAR( TODAY() )+1
  ) ,
  MONTH(Birthdate) ,
  DAY(Birthdate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the Date of the next recurrence of the contacts birthday.</inlineHelpText>
        <label>Next Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_OtherInfos__c</fullName>
        <description>weitere Infos aus ProRex wie zusätzliche Telefon-, Fax-, Mobil-Nummern, E-Mail-Adressen und Adressen</description>
        <inlineHelpText>weitere Infos aus ProRex wie zusätzliche Telefon-, Fax-, Mobil-Nummern, E-Mail-Adressen und Adressen</inlineHelpText>
        <label>weitere Kontakt-Infos aus ProRex</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_Sort__c</fullName>
        <description>für Standardsortierung:
1. zuerst aktive dann ausgeschiedene
2. Nachname
3. Vorname</description>
        <formula>IF ( ausgeschieden__c
, &quot;2_&quot;
, &quot;1_&quot;
)
+
LastName + &apos;, &apos; + FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>für Standardsortierung:
1. zuerst aktive dann ausgeschiedene
2. Nachname
3. Vorname</inlineHelpText>
        <label>Sortierung</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_SphereCopy__c</fullName>
        <description>Zuordnung zur jeweiligen Sphere Hilfefeld für die Freigabeeinstellung</description>
        <inlineHelpText>Zuordnung zur jeweiligen Sphere Hilfefeld für die Freigabeeinstellung</inlineHelpText>
        <label>P7S1_SphereCopy</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Sphere__c</fullName>
        <formula>Text( Owner.P7S1_Sphere__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P7S1_Sphere</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Twitterprofil__c</fullName>
        <description>Hier kann das Twitterprofil als Link erfasst werden.</description>
        <inlineHelpText>Hier kann das Twitterprofil als Link erfasst werden.</inlineHelpText>
        <label>Twitterprofil</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>P7S1_ZuletztGeaendertUm__c</fullName>
        <description>Zeigt Datum und Uhrzeit an, da dies nicht mit dem Standardfeld im Bericht möglich ist</description>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt Datum und Uhrzeit an, da dies nicht mit dem Standardfeld im Bericht möglich ist</inlineHelpText>
        <label>Zuletzt geändert um</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Position_Funktion_extern__c</fullName>
        <description>Bildet die Position ab wie sie im Unternehmen des Kontaktes gelebt und betitelt wird.</description>
        <inlineHelpText>Bildet die Position ab wie sie im Unternehmen des Kontaktes gelebt und betitelt wird.</inlineHelpText>
        <label>Position/Funktion extern</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_funktion__c</fullName>
        <description>spiegelt Funktion/Position wieder aus interner Sicht.</description>
        <inlineHelpText>Function or position of the contact person</inlineHelpText>
        <label>Position/Funktion</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProRexId__c</fullName>
        <description>Entspricht der Personen - ID in ProRex</description>
        <externalId>true</externalId>
        <inlineHelpText>Entspricht der Personen - ID in ProRex</inlineHelpText>
        <label>ProRexId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProRex_Funktions_Id__c</fullName>
        <description>Entspricht der Funktions-ID aus ProRex</description>
        <externalId>true</externalId>
        <inlineHelpText>Entspricht der Funktions-ID aus ProRex</inlineHelpText>
        <label>ProRex-Funktions-Id</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomTv_AT_Datenschutzerklaerung__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Datenschutzerklärung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_AboNewsletterEmail__c</fullName>
        <description>Welche Abo´s bezieht der Kontakt?</description>
        <inlineHelpText>Welche Abo´s bezieht der Kontakt?</inlineHelpText>
        <label>Abo (Newsletter, E-Mail)</label>
        <picklist>
            <picklistValues>
                <fullName>SUCCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdFactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueAds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueFacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDISP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MotivUploader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Researchverteiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ShortTerm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SpotTest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teletext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TopBox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEEKLY</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SomTv_AdelsTitel__c</fullName>
        <description>Falls vorhanden, den entsprechenden Adelstitel auswählen</description>
        <inlineHelpText>Falls vorhanden, den entsprechenden Adelstitel auswählen</inlineHelpText>
        <label>Titel (Adel)</label>
        <picklist>
            <picklistValues>
                <fullName>Baron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baronin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freifrau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freiherr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gräfin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herzog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herzogin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kurfürst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kurfürstin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landgraf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landgräfin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markgraf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markgräfin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pfalzgraf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pfalzgräfin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_AdressePflegen__c</fullName>
        <description>Bestimmt die Funktionsweise der automatischen Adressübernahme aus dem Account. (KV 02275)</description>
        <inlineHelpText>synchronize with a valid shipping or billing address - Depending on address maintenance || synchronize with billing address - despite possibly existing billing address || individual address - Mailing Address must be entered and maintained manually</inlineHelpText>
        <label>Kontaktadresse</label>
        <picklist>
            <picklistValues>
                <fullName>mit gültiger Besuchsadresse oder Rechnungsadresse synchronisieren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mit Rechnungsadresse synchronisieren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>individuell pflegen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Assistenz__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Falls vorhanden die Assistenz vom Kontakt eintragen.</description>
        <inlineHelpText>Falls vorhanden die Assistenz vom Kontakt eintragen.</inlineHelpText>
        <label>Assistenz</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assistenz</relationshipLabel>
        <relationshipName>Kontakte</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_BeherrschteSprachen__c</fullName>
        <description>Beherrscht folgende Sprachen</description>
        <inlineHelpText>Beherrscht folgende Sprachen</inlineHelpText>
        <label>Beherrschte Sprachen</label>
        <picklist>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Contact_ID18__c</fullName>
        <description>Gibt die 18-stellige NICHT Case-sensitive Salesforce ID aus.</description>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>CASESAFEID(Id)</inlineHelpText>
        <label>Contact_ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Datenschutzzustimmung__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ist erforderlich um personenbezogene Daten dauerhaft zu speichern. Mögliche Quellen: Kontakt bestätigt selbst über Website. ASP SevenOne bestätigt mit zusätzlicher Info wie er diese abgefragt hat.</description>
        <inlineHelpText>Ist erforderlich um personenbezogene Daten dauerhaft zu speichern. Mögliche Quellen: Kontakt bestätigt selbst über Website. ASP SevenOne bestätigt mit zusätzlicher Info wie er diese abgefragt hat.</inlineHelpText>
        <label>Datenschutzzustimmung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_DvdBestellungen__c</fullName>
        <description>Welche DVD-Bestellungen liegen vor bzw. sind gewünscht</description>
        <inlineHelpText>Welche DVD-Bestellungen liegen vor bzw. sind gewünscht</inlineHelpText>
        <label>DVD Bestellungen</label>
        <picklist>
            <picklistValues>
                <fullName>S1_Elementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1_VermWanderhure</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SomTv_ErreichbarkeitPraefKommWege__c</fullName>
        <description>Feld zum Pflegen der gewünschten Kommunikationswege des Kontaktes.</description>
        <inlineHelpText>Bitte den vom Kontakt präferierten Kommunikationsweg eintragen.</inlineHelpText>
        <label>Erreichbarkeit: Präf. Kommunikationswege</label>
        <picklist>
            <picklistValues>
                <fullName>Persönlich durch Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telefon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_EvalancheId__c</fullName>
        <description>ID des jeweiligen Kontaktes aus Evalanche</description>
        <externalId>true</externalId>
        <inlineHelpText>ID des jeweiligen Kontaktes aus Evalanche</inlineHelpText>
        <label>Evalanche ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_FanVon__c</fullName>
        <description>Der Kontakt ist Fan von bestimmten Formaten/ Fußballvereinen/ Künstlern</description>
        <inlineHelpText>Der Kontakt ist Fan von bestimmten Formaten/ Fußballvereinen/ Künstlern</inlineHelpText>
        <label>Fan von</label>
        <picklist>
            <picklistValues>
                <fullName>FUSSBALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. FC Nürnberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. FSV Mainz 05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1899 Hoffenheim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayer 04 Leverkusen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borussia Dortmund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borussia Mönchengladbach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eintracht Frankfurt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC Augsburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC Bayern München</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC Schalke 04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortuna Düsseldorf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hamburger SV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hannover 96</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC Freiburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SpVgg Greuther Fürth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VfB Stuttgart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VfL Wolfsburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Werder Bremen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRO7 SENDUNGEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autoball Europameisterschaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Bang Theory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundesvision Song Contest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GNTM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joko gegen Klaas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Popstars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schlag den Raab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schlag den Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Voice of Germany</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Foto__c</fullName>
        <label>Foto</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SomTv_Geburtsname__c</fullName>
        <description>Familienname bei der Geburt</description>
        <inlineHelpText>Familienname bei der Geburt</inlineHelpText>
        <label>Geburtsname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_InteresseMediengattungMD__c</fullName>
        <description>An welchen Mediengattungen ist der Kontakt
interessiert (z.B. TV, Online, Print)</description>
        <inlineHelpText>An welchen Mediengattungen ist der Kontakt
interessiert (z.B. TV, Online, Print)</inlineHelpText>
        <label>Interesse Mediengattung MD</label>
        <picklist>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Werbesendungen TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TXT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HbbTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M4R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beteiligung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kooperationen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Interessen__c</fullName>
        <description>Interessen, die uns vom Kontakt genannt wurden</description>
        <inlineHelpText>Interessen, die uns vom Kontakt genannt wurden</inlineHelpText>
        <label>Interessen</label>
        <picklist>
            <picklistValues>
                <fullName>Fußball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boxen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tennis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Musik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanzen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kochen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wintersport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorsport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>